--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
         <script src="./jquery-3.3.1.min.js"></script>
         <script src="./Task.js"></script>
         <script src="./TaskList.js"></script>
+        <script src="./guiHandler.js"></script>
     </header>
     <body>
+        <div id="addTaskForm">
+            <form action="" method="">
+                <input type="text" name="title" placeholder="Tasktitle" value="Tasktitle" />
+                <input type="submit" value="Add Task" id="addTrigger"/>
+            </form>
+        </div>
         <div id="list">
             <ul id="tasks">
-                
+
             </ul>
         </div>
     </body>
