title and completion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <input type="submit" value="Add Task" id="addTrigger"/>
             </form>
         </div>
+        <h1 id="title">
+            
+        </h1>
         <div id="list">
             <ul id="tasks">
 
