--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <body>
         <div id="addTaskForm">
             <form action="" method="">
-                <input type="text" name="title" placeholder="Tasktitle" value="Tasktitle" />
+                <input type="text" name="title" placeholder="Tasktitle" value="Tasktitle" id="taskinput"/>
                 <input type="submit" value="Add Task" id="addTrigger"/>
             </form>
         </div>
+        <h1 id="title">
+            
+        </h1>
         <div id="list">
             <ul id="tasks">
 
