--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <script src="./Task.js"></script>
         <script src="./TaskList.js"></script>
         <script src="./guiHandler.js"></script>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </header>
     <body>
         <div id="addTaskForm">
@@ -14,7 +16,7 @@
             </form>
         </div>
         <h1 id="title">
-            
+
         </h1>
         <div id="list">
             <ul id="tasks">
