--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="addTaskForm">
             <form action="" method="">
-                <input type="text" name="title" placeholder="Tasktitle" value="Tasktitle" id="taskinput"/>
+                <input type="text" name="title" placeholder="Tasktitle" id="taskinput"/>
                 <input type="submit" value="Add Task" id="addTrigger"/>
             </form>
         </div>
