font changed, width based on content

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
         <script src="./guiHandler.js"></script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="./css/tasklistitem.css">
     </header>
     <body>
         <div id="addTaskForm">
             <form action="" method="">
                 <input type="text" name="title" placeholder="Tasktitle" id="taskinput"/>
+                <select aria-placeholder="priority">
+                    <option value="low">Low</option>
+                    <option value="medium">Medium</option>
+                    <option value="high">High</option>
+                  </select>
                 <input type="submit" value="Add Task" id="addTrigger"/>
             </form>
         </div>
