--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v3.1.0</title>
-
+  <script src="./jquery-3.3.1.min.js"></script>
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-3.1.0/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-3.1.0/jasmine.css">
 
