test id fetching

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,11 +14,12 @@
   <!-- include source files here... -->
   <script src="Task.js"></script>
   <script src="TaskList.js"></script>
+  <script src="main.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TaskSpec.js"></script>
   <script src="spec/TaskListSpec.js"></script>
-
+  <script src="spec/MainSpec.js"></script>
 </head>
 
 <body>
