--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./jquery-3.3.1.min.js"></script>
     <script src="./Task.js"></script>
     <script src="./TaskList.js"></script>
+    <script src="./main.js"></script>
     <script src="./guiHandler.js"></script>
     
     <title>Tasklist</title>
