--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./TaskList.js"></script>
     <script src="./main.js"></script>
     <script src="./guiHandler.js"></script>
-    
+
     <title>Tasklist</title>
 </head>
 
@@ -26,6 +26,9 @@
         <div class="jumbotron">
             <h1>Tasklist</h1>
             <p>super amazing Tasklist for 1337 h@xxr</p>
+            <button id="createList" class="btn btn-primary">
+                    Create List
+                </button>
         </div>
     </div>
     <div class="container">
@@ -39,6 +42,7 @@
                         </div>
                         <input type="submit" class="btn btn-primary" value="Add Task" id="addTrigger" />
                     </form>
+
                 </div>
             </div>
             <div class="col-lg-6">
